bug: Three.js avatar overflow

--- a/portfolio/src/app/sections/contact/contact.component.scss
+++ b/portfolio/src/app/sections/contact/contact.component.scss
@@ -10,3 +10,7 @@
 .contact-container {
     width: 300px;
 }
+
+* {
+    overflow: hidden;
+}
